k8s/transaction-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-generator-api
  namespace: financial-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-generator-api
  template:
    metadata:
      labels:
        app: transaction-generator-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker
      imagePullSecrets:
      - name: docker-registry-secret
      containers:
      - name: transaction-generator-api
        image: ghassenmassaoud/transaction-api:latest
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-generator-api
  namespace: financial-system
spec:
  selector:
    app: transaction-generator-api
  ports:
  - port: 7000
    targetPort: 7000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-analyser-service
  namespace: financial-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-analyser-service
  template:
    metadata:
      labels:
        app: data-analyser-service
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker    
      imagePullSecrets:
      - name: docker-registry-secret
      containers:
      - name: data-analyser-service
        image: ghassenmassaoud/data-analyser:latest
        ports:
        - containerPort: 7002
        livenessProbe:
          httpGet:
            path: /health
            port: 7002
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: data-analyser-service
  namespace: financial-system
spec:
  selector:
    app: data-analyser-service
  ports:
  - port: 7002
    targetPort: 7002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ui
  namespace: financial-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-ui
  template:
    metadata:
      labels:
        app: client-ui
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker
      imagePullSecrets:
      - name: docker-registry-secret
      containers:
      - name: client-ui
        image: ghassenmassaoud/client-ui:latest
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: client-ui
  namespace: financial-system
spec:
  selector:
    app: client-ui
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
