k8s/gateways.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: financial-system-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vermeg-job.duckdns.org"
    - "kibana-job.duckdns.org"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: client-ui-vs
  namespace: financial-system
spec:
  hosts:
  - "vermeg-job.duckdns.org"
  gateways:
  - istio-system/financial-system-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-ui
        port:
          number: 4000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana-vs
  namespace: financial-system
spec:
  hosts:
  - "kibana-job.duckdns.org"
  gateways:
  - istio-system/financial-system-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kibana
        port:
          number: 5601
